<resources>
    <string name="app_name">Wings Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_on_boarding">Daftarkan diri anda dan gabung dengan BossKu sekarang juga!</string>
    <string name="lbl_button_on_boarding_buyyer">Gabung Sebagai Pembeli</string>
    <string name="lbl_button_on_boarding_seller">Gabung Sebagai UMKM</string>
    <string name="lbl_text_field_nama">Nama Produk</string>
    <string name="lbl_text_field_jasa_pengiriman">Jasa Pengiriman</string>
    <string name="lbl_text_field_no_resi">Nomer Resi Pengiriman</string>
    <string name="lbl_text_field_noresi">Masukan Nomer Resi Pengiriman</string>
    <string name="lbl_sub_title_register">Silahkan mengisi data berikut untuk membuat akun anda</string>
    <string name="lbl_title_register">Buat Akun Anda</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_review_produk">Review Produk</string>
    <string name="hint_email">Ketik Email</string>
    <string name="hint_review_produk">Silahkan review produk yang telah anda beli</string>
    <string name="lbl_phone">No. Telpon</string>
    <string name="hint_phone">No. Telpon</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_lama">Password Lama</string>
    <string name="lbl_password_baru">Password Baru</string>
    <string name="hint_password">Ketik Password</string>
    <string name="hint_password_lama">Ketik Password Lama Anda</string>
    <string name="hint_password_baru">Ketik Password Baru Anda</string>
    <string name="lbl_button_register">Daftarkan Akun</string>
    <string name="lbl_button_kirimkan">Kirimkan</string>
    <string name="lbl_no_ktp">No. KTP</string>
    <string name="hint_no_ktp">No. KTP</string>
    <string name="lbl_login">Selamat Datang Kembali</string>
    <string name="lbl_sub_title_login">Silahkan mengisi data berikut untuk masuk ke Aplikasi</string>
    <string name="lbl_button_login">Masuk</string>
    <string name="type_buyyer">BUYYER</string>
    <string name="lbl_sudah_punya_akun">Sudah punya akun?</string>
    <string name="lbl_syarat_ketentuan">Dengan mendaftar Anda menyetujui Syarat Penggunaan kami</string>
    <string name="lbl_back">Kembali</string>
    <string name="lbl_menu_beranda">Beranda</string>
    <string name="lbl_menu_berita">Berita</string>
    <string name="lbl_menu_toko">Toko</string>
    <string name="lbl_menu_profil">Profil</string>
    <string name="_null">_null</string>
    <string name="lbl_lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="lbl_ubah_password">Ubah Password</string>
    <string name="doesnt_have_account">Belum punya akun?</string>
    <string name="lbl_mitra_umkm_bossku">Mitra UMKM BossKu</string>
    <string name="lbl_kategori_produk">Kategori Produk</string>
    <string name="lbl_produk_popular">Produk Popular</string>
    <string name="lbl_starbucks_coffee_caramel">Starbucks Coffee Caramel</string>
    <string name="lbl_kategori_alat_musik">Alat Musik</string>
    <string name="lbl_kategori_tanaman_hias">Tanaman Hias</string>
    <string name="lbl_kategori_fotografi">Fotograpi</string>
    <string name="lbl_kategori_gadget">Gadget</string>
    <string name="lbl_kategori_sport">Sport</string>
    <string name="lbl_kategori_kerajinan">Kerajinan</string>
    <string name="hint_cari_barang">Cari Barang</string>
    <string name="hint_cari_berita">Cari berita</string>
    <string name="lbl_berita_title">Malang Young Leader Community Pelatihan Public Speaking</string>
    <string name="lbl_berita_desc">Vel augue venenatis tempus erat dignissim eleifend. Enim sagittis, tincidunt lacinia ipsum adipiscing tempor enim blandit convallis. Id tempor lacus amet augue. At mus vitae sit montes, sodales velit aliquam suspendisse. Dolor congue vitae ac velit faucibus neque tellus massa dignissim.</string>
    <string name="lbl_ex_category">Lifestyle</string>
    <string name="lbl_day_berita">2 Hari yang lalu</string>
    <string name="lbl_button_daftar_pelatihan">Daftar Pelatihan</string>
    <string name="isi_form_berikut_untuk_mendaftar_malang_young_leader_community_pelatihan_public_speaking">Isi form berikut untuk mendaftar “Malang Young Leader Community Pelatihan Public Speaking”</string>
    <string name="lbl_button_daftar">Daftar</string>
    <string name="sukses_mendaftar_malang_young_leader_community_pelatihan_public_speaking">Sukses mendaftar “Malang Young Leader Community Pelatihan Public Speaking”</string>
    <string name="lbl_button_kembali_ke_berita">Kembali ke Berita</string>
    <string name="lbl_alamat">Alamat</string>
    <string name="lbl_description_umkm">Deskripsi UMKM</string>
    <string name="lbl_simpan">Simpan</string>
    <string name="lbl_status_pembayaran">Status Pembayaran</string>
    <string name="lbl_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lbl_edit_informasi_toko">Edit Informasi Toko</string>
    <string name="hint_error_name_regis">Nama lengkap diisi antara 2–30 karakter</string>
    <string name="hint_error_email_regis">Email diisi sesuai dengan format</string>
    <string name="hint_error_phone_regis">Hanya dapat diisi no. hanphone yang valid</string>
    <string name="hint_error_ktp_regis">Hanya dapat diisi NIK yang valid</string>
    <string name="hint_error_password_regis">Password diisi antara 6–30 karakter</string>
    <string name="label_informasi_penjual">Informasi Penjual</string>
    <string name="label_beli">Beli</string>
    <string name="label_keranjang">+Keranjang</string>
    <string name="label_verif_description">Admin sedang memverifikasi akun Anda, kami akan beri tahu Anda jika verifikasi selesai.</string>
    <string name="sample_title_toolbar">Title Toolbar</string>
    <string name="label_list_umkm">List UMKM</string>
    <string name="kelola_toko">Kelola Produk</string>
    <string name="label_daftar_pesanan">Daftar Pesanan</string>
    <string name="label_keluar_akun">Keluar Akun</string>
    <string name="label_ktp">KTP</string>
    <string name="label_unggah">Unggah</string>
    <string name="label_data_harus_diisi">Data harus diisi</string>
    <string name="label_berhasil">Berhasil</string>
    <string name="label_your_photo_successfully_taken">Foto anda berhasil diambil</string>
    <string name="label_photo_taken_time">Foto diambil jam %s </string>
    <string name="lbl_choose_1">Pilih dari</string>
    <string name="label_kamera">Kamera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_cancel">Batalkan</string>
    <string name="label_error">Terjadi Kesalahan</string>
    <string name="label_unggah_lagi">Unggah Lagi</string>
    <string name="label_edit_akun">Edit Akun</string>
    <string name="label_confirmation">Konfirmasi</string>
    <string name="label_ya">Ya</string>
    <string name="label_no">Tidak</string>
    <string name="label_lanjutkan_review">Lanjutkan Review</string>
    <string name="label_message_dialog_logout">Apakah Anda yakin ingin keluar dari aplikasi</string>
    <string name="label_message_dialog_review">Apakah Anda ingin memberi review pada pembelian ini?</string>
    <string name="label_message_dialog_back_from_review">Dengan kembali, anda menyatakan transaksi telah selesai tanpa mereview produk</string>
    <string name="label_daftar_pelatihan">Daftar Pelatihan</string>
    <string name="labeldata_masih_kosong">Data Tidak Ditemukan</string>
    <string name="empty_product_popular">Belum Ada Produk Popular</string>
    <string name="empty_list_product">Belum ada Produk Apapun, \n\nYuk Ramaikan</string>
    <string name="empty_product_umkm">UMKM Belum Memiliki Produk</string>
    <string name="empty_pelatihan">Pelatihan untuk Saat Ini Tidak Tersedia</string>
    <string name="empty_pelatihan_own">Anda Belum mengikuti Pelatihan Apapun</string>
    <string name="label_pelatihan">Pelatihan</string>
    <string name="label_berita">Berita</string>
    <string name="label_detail_berita">Detail Berita</string>
    <string name="label_detail_pelatihan">Detail Pelatihan</string>
    <string name="label_registrasi_pelatihan">Registrasi Pelatihan</string>
    <string name="label_nama_lengkap">Nama Lengkap</string>
    <string name="label_ketik_nama_lengkap">Ketik Nama Lengkap</string>
    <string name="label_ketik_no_telpon">Ketik No Telpon</string>
    <string name="label_ketik_alamat">Ketik Alamat</string>
    <string name="label_button_daftar_pelatihan">Daftar Pelatihan</string>
    <string name="label_kembali_ke_berita">Kembali ke Pelatihan</string>
    <string name="text_umkm">UMKM</string>
    <string name="txt_detail_umkm">Detail UMKM</string>
    <string name="lb_informasi_toko">Informasi Toko</string>
    <string name="lb_pelatihan_yang_diikuti">Pelatihan yang diikuti</string>
    <string name="lb_keranjang">Keranjang</string>
    <string name="label_keranjang_belanja">Keranjang Belanja</string>
    <string name="label_lihat_keranjang">Lihat Keranjang</string>
    <string name="label_gelas_bahan_metal_hijau_tua_murah_bagus_berkualitas_ramah_lingkungan">Gelas Bahan Metal Hijau Tua Murah Bagus Berkualitas Ramah Lingkungan</string>
    <string name="label_qty">Banyak Barang :</string>
    <string name="label_total_harga">Total Harga</string>
    <string name="txt_daftar_product">Daftar Product</string>
    <string name="txt_product">Product</string>
    <string name="label_lihat_profil_saya">Lihat Profil Saya</string>
    <string name="label_nama_penerima">Nama Penerima</string>
    <string name="label_alamat_pengiriman">Alamat Pengiriman</string>
    <string name="label_ringkasan_belanja">Ringkasan Belanja</string>
    <string name="label_total_ongkos_kirim">Total Ongkos Kirim</string>
    <string name="label_dengan_membayar_saya_menyetujui_syarat_dan_ketentuan_asuransi">Dengan membayar, saya menyetujui syarat dan ketentuan asuransi</string>
    <string name="label_total_tagihan">Total Tagihan</string>
    <string name="label_pilih_pembayaran">Pilih Pembayaran</string>
    <string name="label_bayar">Bayar</string>
    <string name="label_pilih_alamat_lain">Pilih Alamat Lain</string>
    <string name="label_metode_pengiriman">Metode Pengiriman</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="txt_hint_cari_berita">Cari Berita</string>
    <string name="txt_todo">TODO</string>
    <string name="txt_tambah_product">Tambah Product</string>
    <string name="txt_edit_product">Edit Product</string>
    <string name="label_tidak_ditemukan_data">Tidak ditemukan Data</string>
    <string name="label_berita_selengkapnya">Berita Selengkapnya</string>
    <string name="label_pelatihan_selengkapnya">Pelatihan Selengkapnya</string>
    <string name="label_cari_produk">Cari Produk</string>
    <string name="_0">0</string>
    <string name="txt_hint_deskripsi">Deskripsi</string>
    <string name="txt_success_edit_profile">Sukses Edit Profile</string>
    <string name="label_harga">Harga</string>
    <string name="label_id_customer">Id Customer</string>
    <string name="label_hint_id_customer">Id Customer</string>
    <string name="label_hint_distance">Jarak Tempuh</string>
    <string name="label_distance">Jarak Tempuh</string>
    <string name="label_hint_discount">Potongan</string>
    <string name="label_placeholder_discount">Potongan</string>
    <string name="label_username">Username</string>
</resources>