<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.register.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewLabelTitle1"
                    style="@style/Montserrat.Bold.Black1.24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:text="@string/lbl_login"
                    android:textColor="@color/lightBluePrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewLabelTitle2"
                    style="@style/Montserrat.Black1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:text="@string/lbl_sub_title_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLabelTitle1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etUsername"
                    style="@style/BaseTextInputLayout.First"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:hint="Username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLabelTitle2"
                    app:placeholderText="Ketik Username">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/BaseTextInputEditText.OneLine"
                        android:inputType="text"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPassword"
                    style="@style/BaseTextInputLayout.Password.First"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:hint="@string/lbl_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etUsername"
                    app:placeholderText="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/BaseTextInputEditText.OneLine"
                        android:inputType="textPassword"
                        android:maxLength="255" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginVertical="@dimen/_16dp"
                    android:enabled="false"
                    android:text="@string/lbl_button_register"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>